--- a/content/drag-and-drop-in-react-with-dnd-kit.mdx
+++ b/content/drag-and-drop-in-react-with-dnd-kit.mdx
@@ -10,7 +10,7 @@ postId: "drag-and-drop-in-react-with-dnd-kit"
 
 DnD Kit is a relatively new, hook-based library that makes it easy to create performant and accessible drag-and-drop UI interactions in React. I have been using the library a lot at Super, particularly in our new dashboard, and I wanted to share some examples of what can be achieved with DnD Kit.
 
-In this post, I will provide a brief overview of the fundamentals of DnD Kit and then move on to code examples with explanations. If you need more information about DnD Kit, you can always consult the documentation.
+If you're already familiar with DnD Kit, or just want to take a look at the code examples, you can jump straight to them [here](#examples). Otherwise, read on to learn more about the library and how to get started.
 
 <Callout intent="info" heading="Intended Audience">
   This article assumes you have a basic understanding of React and Typescript.
@@ -28,15 +28,16 @@ To see how these elements typically come together, you can play with the demo be
 
 <FreeDnd />
 
+In the demo, we can drag our draggable components and drop them anywhere on the page. However, we can also restrict the dropping of our draggable components to particular droppable areas on the page:
 In the demo, we can drag our draggable components and drop them anywhere on the page. However, we can also restrict the dropping of our draggable components to particular droppable areas:
 
 <DroppableDnd />
 
 DndKit is designed around this approach, providing three core primitives exported from the `@dnd-kit/core` package:
 
-1. The `useDraggable` hook - A React hook which makes HTML elements draggable.
-2. The `useDroppable` hook - A React hook which makes HTML elements droppable areas.
-3. The `DndContext` - A context provider which manages the interaction between draggable and droppable components using the React Context API.
+1. The [`useDraggable`](https://docs.dndkit.com/api-documentation/draggable) hook - A React hook which makes HTML elements draggable.
+2. The [`useDroppable`](https://docs.dndkit.com/api-documentation/droppable) hook - A React hook which makes HTML elements droppable areas.
+3. The [`DndContext`](https://docs.dndkit.com/api-documentation/context-provider) - A context provider which manages the interaction between draggable and droppable components using the React Context API.
 
 Often, drag-and-drop interactions require more than just dragging and dropping components. For example, take a look at the demo below:
 
@@ -48,10 +49,10 @@ We can use Sortable Components in many ways. For example, we can have Sortable c
 
 <SortableMultiDnd />
 
-To handle this use case, DnD-Kit exposes a set of presets from the `@dnd-kit/sortable` package:
+To handle this use case, DnDKit exposes a set of presets from the `@dnd-kit/sortable` package:
 
-1. The `useSortable` hook - A react hook which makes HTML elements sortable. The hook is a combination of the `useDraggable` and `useDroppable` hooks.
-2. The `SortableContext` - An additional context provider which manages the interactions between sortable components.
+1. The [`useSortable`](https://docs.dndkit.com/presets/sortable/sortable-context) hook - A react hook which makes HTML elements sortable. The hook is a combination of the `useDraggable` and `useDroppable` hooks.
+2. The [`SortableContext`](https://docs.dndkit.com/presets/sortable/usesortable) - An additional context provider which manages the interactions between sortable components.
 
 Let's now explore how to use the primitives and presets to create various drag-and-drop interactions.
 
@@ -59,19 +60,23 @@ Let's now explore how to use the primitives and presets to create various drag-a
 
 We'll be looking at four common types of drag and drop interactions:
 
-1. **Free Drag-and-Drop** - Drag elements across the entire screen, similar to apps such as Figma and Excalidraw.
-2. **Droppable Containers** - Drag multiple draggable components into one or more designated areas.
-3. **Single Container Sortable List** - A list within one container that rearranges items as they are dragged.
-4. **Multi-Container Sortable List** - A sortable list with items that can be dropped and sorted into multiple containers.
+## Examples
+
+Let's explore how to use the primitives and presets to create different drag-and-drop interactions. We'll look at four common types:
+
+1. **Free Drag-and-Drop** - Drag draggable components across the entire page, similar to apps such as Figma and Excalidraw.
+2. **Droppable Containers** - Drag multiple draggable components into one or more designated droppable containers.
+3. **Single Container Sortable List** - A sortable list within a single container.
+4. **Multi-Container Sortable List** - Sortable lists within multiple sortable containers.
 
 ### Free Drag-and-Drop
 
-A user interface allows users to pick up and drag an element across the entire viewport.
+A user interface allows users to pick up and drag an element across the entire page.
 
 <FreeDnDSandPack />
 
 <Callout intent='default' dropdown heading='Code Breakdown'>
-First, we create a `Draggable` Component with the `useDraggable` hook.  This component takes a unique `id`, and a `styles` object as props:
+First, we create a `Draggable` component with the `useDraggable` hook.  This component takes a unique `id`, and a `styles` object as `props`:
 
 ```tsx
 import { useDraggable } from "@dnd-kit/core";
@@ -107,17 +112,16 @@ function Draggable(props: DraggableProps) {
 }
 ```
 
-Next, we need to set up our `DndContext` and the state of our `Draggable` components. We'll be storing the data about our `Draggable` components as an array of objects in state.
+Next, we set up our `DndContext` and the state of our `Draggable` components. The data about our `Draggable` components are stored in state as an array of objects.
 
-Each object should include a unique `id` and the initial `x` and `y` position coordinates of our `Draggable` components:
+Each object includes a unique `id` , a `name` and the initial `x` and `y` positions of our `Draggable` components:
 
 ```tsx
-//Set up DndContext and the state of our draggable elements
 import { DndContext } from "@dnd-kit/core";
 import { Draggable } from "./Draggable";
 
 export function App() {
-  //The state of our draggable elements
+  //The state of our draggable components
   const [draggables, setDraggables] = React.useState([
     {
       id: "DG",
@@ -145,12 +149,16 @@ export function App() {
   );
 
   return (
-    <DndContext sensors={sensors}>
+    <DndContext
+      sensors={sensors}
+      //we implement this handler below
+      onDragEnd={handleDragEnd}
+    >
       {draggables.map((d) => (
         <Draggable
           {...d}
           key={d.id}
-          //We pass the current position of the draggbale here ass CSS styles
+          //We pass the current position of the draggables here as CSS styles
           styles={{
             position: "absolute",
             left: `${d.position.x}px`,
@@ -163,59 +171,28 @@ export function App() {
 }
 ```
 
-We'll use the `onDragEnd` event emitted by the DndContext to update the positions of our components when a drag event ends. This event contains the `x` and `y` positions of the active `Draggable` component when it is dropped.
+We use the `onDragEnd` event emitted by the `DndContext` to update the positions of our components when a drag event ends. This event contains the `x` and `y` positions of the active `Draggable` component when it is dropped.
 
-In our handler function, we can access this information to update the component's position in state.
+In our handler function, we access this information and use it to update the position of our `Draggable` components in state:
 
 ```tsx
-import {
-  DndContext,
-  KeyboardSensor,
-  MouseSensor,
-  TouchSensor,
-  useSensor,
-  useSensors,
-} from "@dnd-kit/core";
-import { Draggable } from "./Draggable";
+//Handler function to respond to an onDragEnd event
+function handleDragEnd(ev: DragEndEvent) {
+  const { active, delta } = ev;
 
-export function App() {
-  const [draggables, setDraggables] = React.useState([...draggable]);
+  //if there is no active draggable, return
+  if (!active) return;
 
-  //Handler function to respond to an onDragEnd event
-  function handleDragEnd(ev: DragEndEvent) {
-    const { active } = ev;
+  //find the active draggable in state
+  const draggable = draggables.find((d) => d.id === active.id);
 
-    //if there is no active draggable, return
-    if (!active) return;
+  //update the position of the active draggable
+  draggable.position.x += delta.x;
+  draggable.position.y += delta.y;
 
-    //find the active draggable in state
-    const draggable = draggables.find((x) => x.id === ev.active.id);
-
-    //update the position of the active draggable
-    draggable.position.x += ev.delta.x;
-    draggable.position.y += ev.delta.y;
-
-    setDraggables((draggables) =>
-      //update the state of the active draggable with the new position
-      draggables.map((d) => (d.id === draggable.id ? draggable : d))
-    );
-  }
-
-  return (
-    <DndContext onDragEnd={handleDragEnd} sensors={sensors}>
-      {draggables.map((d) => (
-        <Draggable
-          key={d.id}
-          id={d.id}
-          name={d.name}
-          styles={{
-            position: "absolute",
-            left: `${d.position.x}px`,
-            top: `${d.position.y}px`,
-          }}
-        />
-      ))}
-    </DndContext>
+  setDraggables((draggables) =>
+    //update the state of the active draggable with the new position
+    draggables.map((d) => (d.id === draggable.id ? draggable : d))
   );
 }
 ```
@@ -229,9 +206,9 @@ A user interface allows users to pick up and drag an element into designated dro
 <DroppableDndSandPack />
 
 <Callout intent='default' dropdown heading='Code Breakdown'>
-We need `Draggable` and `Droppable` components to build this. The draggable component is similar to the one we made in the free DnD example.
+We need a `Draggable` component. This component is identical to the one we created in the free drag and drop example above, so I will omit the implementation here.
 
-To create a droppable component, we'll use the `useDropabale` hook. This component takes a unique `id` as props, similar to the `Draggable` component:
+As we have designated droppable areas, we create a `Droppable` component with the `useDropabale` hook. This component takes a unique `id` as props, similar to the `Draggable` component:
 
 ```tsx
 import { useDroppable } from "@dnd-kit/core";
@@ -260,7 +237,7 @@ export function Droppable(props: DroppableProps) {
 }
 ```
 
-Next, we need to set up our `DndContext` and the state of our draggable and droppable components:
+Next, we set up our `DndContext` and the state of our `Draggable` and `Droppable` components:
 
 ```tsx
 import {
@@ -275,11 +252,13 @@ import {
 } from "@dnd-kit/core";
 import { Droppable } from "./Droppable";
 import { Draggable } from "./Draggable";
+import React from "react";
 
 export default function App() {
   //set up state for draggable and droppable components
-  //The state is an object where the keys are the ids of the droppable components
-  //and the values are an array of draggable components that are currently in the droppable area
+  //The state is an object where the keys are the ids of the
+  //droppable components and the values are an array of draggable
+  //components that are currently in the droppable area
   const [items, setItems] = React.useState({
     A: [
       {
@@ -332,9 +311,7 @@ export default function App() {
 }
 ```
 
-To allow our draggable components to move between containers, we need a helper function, `findContainer`, which takes an `id` and returns the relevant droppable container id.
-
-We use this helper function in our `handleDragEnd` function to find the items in the active and over containers in response to the `onDragEnd` event and update them in state:
+We use `findContainer`, a helper function, to get the `ids` of `Droppable` containers that have an active `Draggable` component, or one over them. This helps us in `handleDragEnd` to identify the `Droppable` containers we want to update in state at the end of a drag event:
 
 ```tsx
 function findContainer(id: string) {
@@ -398,7 +375,7 @@ A container containing a list of items that can be rearranged by dragging them.
 <SortableDndSandPack />
 
 <Callout dropdown intent='default' heading='Code Breakdown'>
-First we create a SortableItem Component with the `useSortable` hook.  This component takes a unique `id`, and a `name`  as `props`:
+First, we create a `SortableItem` component with the `useSortable` hook. This component takes a unique `id` and a `name` as props:
 
 ```tsx
 import { CSS } from "@dnd-kit/utilities";
@@ -443,9 +420,10 @@ export function SortableItem(props: SortableItemProps) {
 }
 ```
 
-Next, we need to set up our `DndContext` and the state of our sortable component:
+Next, we set up our `DndContext` and the state of our `SortableItem` component, which is a simple array:
 
 ```tsx
+import React from "react";
 import type { DragEndEvent } from "@dnd-kit/core";
 import {
   closestCenter,
@@ -461,31 +439,28 @@ import {
   sortableKeyboardCoordinates,
   verticalListSortingStrategy,
 } from "@dnd-kit/sortable";
-import React from "react";
 import { SortableItem } from "./SortableItem";
 
-//set up the initial items
-const initialItems = [
-  {
-    id: "dnuannvBxx",
-    name: "GOLD",
-  },
-  {
-    id: "mrY2amrFiv",
-    name: "BRONZE",
-  },
-  {
-    id: "Y7UE3g7kD2",
-    name: "APRICOT",
-  },
-  {
-    id: "kZ9B3D_JyO",
-    name: "BEIGE",
-  },
-];
-
 export default function App() {
-  const [sortables, setSortables] = React.useState([...initialItems]);
+  const [sortables, setSortables] = React.useState([
+    {
+      id: "dnuannvBxx",
+      name: "GOLD",
+    },
+    {
+      id: "mrY2amrFiv",
+      name: "BRONZE",
+    },
+    {
+      id: "Y7UE3g7kD2",
+      name: "APRICOT",
+    },
+    {
+      id: "kZ9B3D_JyO",
+      name: "BEIGE",
+    },
+  ]);
+
   const sensors = useSensors(
     useSensor(PointerSensor),
     useSensor(KeyboardSensor, {
@@ -495,13 +470,16 @@ export default function App() {
 
   return (
     <DndContext
+      //collision detection algorithm best suited for single container sortables,
+      //see more at https://docs.dndkit.com/api-documentation/context-provider/collision-detection-algorithms
       collisionDetection={closestCenter}
       sensors={sensors}
       onDragEnd={handleDragEnd}
     >
       <SortableContext
         items={sortables}
-        //sorting strategy suited for vertical lists see https://docs.dndkit.com/presets/sortable#sorting-strategies for more
+        //sorting strategy suited for vertical lists
+        //see https://docs.dndkit.com/presets/sortable#sorting-strategies for more
         strategy={verticalListSortingStrategy}
       >
         <div className="app">
@@ -515,7 +493,7 @@ export default function App() {
 }
 ```
 
-Finally, we need to handle the `onDragEnd` event:
+Finally, we update the positions of our sortable items at the end of the drag event using the `onDragEnd` event emitted by the `DndContext`:
 
 ```tsx
 function handleDragEnd(event: DragEndEvent) {
@@ -545,9 +523,9 @@ A list that can be sorted and items that can be dropped into multiple containers
 <SortableMultiDndSandPack />
 
 <Callout intent='default' dropdown heading='Code Breakdown'>
-  We are going to need a `SortableItem`  and `SortableContainer` components to build this. The `SortableItem` component is identical to the one we made in the Single Container Sortables example above. 
-  
-  The `SortableContainer` is quite similar as well, the only diffrence is that we need to add an empty droppable container to the `SortableContainer` component when it has no items:
+We need a `SortableItem` component. This component is identical to the one we created in the single container sortable list example above, so I will omit the implementation here.
+
+Our containers are sortable, so we create a `SortableContainer` component. This is quite similar to the `SortableItem`, but we need to add an empty `Droppable` container when it has no items:
 
 ```tsx
 import {
@@ -626,7 +604,7 @@ export function SortableContainer(props: SortableContainerProps) {
 }
 ```
 
-Next, we need to set up our `DndContext` and the state of our items and containers:
+Next, we set up our `DndContext` and the state of our items and containers:
 
 ```tsx
 import {
@@ -648,27 +626,24 @@ import {
 import React from "react";
 import { SortableContainer } from "./SortableContainer";
 
-//initial items
-export const initialItems = [
-  {
-    id: "A",
-    name: "Container A",
-    //helper function to create an array of draggbale items
-    items: createData(3, (index) => `ITEM A${index + 1}`),
-  },
-  {
-    id: "B",
-    name: "Container B",
-    //helper function to create an array of draggbale items
-    items: createData(2, (index) => `ITEM B${index + 1}`),
-  },
-];
-
 export default function App() {
   //state of the items
-  const [sortables, setSortables] = React.useState([...initialItems]);
+  const [sortables, setSortables] = React.useState([
+    {
+      id: "A",
+      name: "Container A",
+      //helper function to create an array of draggbale items
+      items: createData(3, (index) => `ITEM A${index + 1}`),
+    },
+    {
+      id: "B",
+      name: "Container B",
+      //helper function to create an array of draggbale items
+      items: createData(2, (index) => `ITEM B${index + 1}`),
+    },
+  ]);
 
-  //rembmber to set up your sensors
+  //remember to set up your sensors
   const sensors = useSensors(
     useSensor(PointerSensor),
     useSensor(KeyboardSensor, {
@@ -702,14 +677,17 @@ export default function App() {
 }
 ```
 
-Now we can implement the `onDragOver` handler. This handler will be called when a draggable item is dragged over a droppable container. We will use this handler to update the state of the items and containers when a draggable item is dragged over a droppable container. We have two helper function to help us with this:
+We respond to two events in this example:
 
-- `findContainer` - finds the active or over container based on the id of the active or over item. If the active or over item is a container, it will return the id of the container. If the active or over item is an item inside a container, it will return the id of the container that the item is inside.
-- `isSortingContainers` - Returns true if the active and over items are both containers. If this is true we know we are sorting the containers and not the items inside the containers.
+- `onDragOver` when a `SortableItem` is dragged over a `SortableContainer`;
+- `onDragEnd` when a `SortableContainer` is sorted with other `SortableContainer's` or when a `SortableItem` is sorted within a `SortableContainer`.
+
+In the `onDragOver` handler, we use two helper functions: `findContainer`, which finds the relevant container based on the id passed in, and `isSortingContainers`, which returns true if the active and over items are both `SortableContainers`:
 
 ```tsx
 function findContainer(id?: string) {
   if (id) {
+    //find the container id based on the id of container item
     const container = sortables?.find((i) =>
       i.items?.find((l) => l?.id === id)
     );
@@ -791,7 +769,7 @@ function handleDragOver(event: DragOverEvent) {
 }
 ```
 
-Now we can implement the `onDragEnd` handler. This handler will be called when a draggable item is dropped. We will use this handler to update the state of the items and containers when a draggable item is dropped. We will be using our helper functions here as well:
+In the `onDragEnd` handler, we handle two cases: sorting a `SortableContainer` and sorting a `SortableItem` within a `SortableContainer`:
 
 ```tsx
 function handleDragEnd(event: DragEndEvent) {
@@ -840,6 +818,6 @@ function handleDragEnd(event: DragEndEvent) {
 
 I hope I managed to demonstrate the power of DndKit. Its strength lies in its flexibility. You can use it to create anything from a simple to-do list to a complex drag-and-drop interface.
 
-I hope you enjoyed this post. If you have any questions, you can reach me on Twitter [@kxlaa\_](https://twitter.com/kxlaa_) and I'll be happy to answer them. You can also check out the [DndKit](https://dndkit.com/) website for more examples and documentation.
+I hope you enjoyed this post. If you have any questions, you can reach me on Twitter [@kxlaa\_](https://twitter.com/kxlaa_) and I'll be happy to answer them.
 
 Thank you for reading and happy coding!
